# dr4-c-h

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  debug_and_strings.c  magicseq.c  row_appender.c
src/: dr4-h-lib.c  dr4-h-lib.h  dr4-h.h
tests/: CMakeLists.txt  test_failures.h  test_find.c  test_fmt.c  test_messages.h  test_read.c  test_si32.c
